try to fix workflow

--- a/.github/workflows/publish_docs_to_wiki.yml
+++ b/.github/workflows/publish_docs_to_wiki.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  publish_docs_to_wiki:
+  run:
     name: Publish docs to Wiki
     runs-on: ubuntu-latest
     steps:  
