--- a/.github/workflows/publish_docs_to_wiki.yml
+++ b/.github/workflows/publish_docs_to_wiki.yml
@@ -23,6 +23,7 @@ jobs:
           git remote add upstream https://${{ secrets.WIKI_ACTION_TOKEN }}@github.com/nanos/FediFetcher.wiki.git > /dev/null 2>&1
           git fetch origin
           git fetch upstream
+          git log --max-count=10   
           git merge upstream/master --no-edit
           git push origin HEAD:master > /dev/null 2>&1
           git push upstream HEAD:master > /dev/null 2>&1
