Make sure we're actually on master

--- a/.github/workflows/publish_docs_to_wiki.yml
+++ b/.github/workflows/publish_docs_to_wiki.yml
@@ -19,11 +19,12 @@ jobs:
         run: |
           git config user.name wiki-bot
           git config user.email bot@thms.uk
-          git config pull.rebase false
           git remote remove origin
           git remote add origin https://${{ secrets.WIKI_ACTION_TOKEN }}@github.com/nanos/FediFetcher-docs.git > /dev/null 2>&1
           git remote add upstream https://${{ secrets.WIKI_ACTION_TOKEN }}@github.com/nanos/FediFetcher.wiki.git > /dev/null 2>&1
           git fetch origin
-          git pull upstream master
+          git fetch upstream
+          git switch master
+          git merge upstream/master --no-edit
           git push origin HEAD:master > /dev/null 2>&1
           git push upstream HEAD:master > /dev/null 2>&1
