add tmate back in

--- a/.github/workflows/publish_docs_to_wiki.yml
+++ b/.github/workflows/publish_docs_to_wiki.yml
@@ -15,13 +15,13 @@ jobs:
       # - name: Checkout repository
       #   uses: actions/checkout@v3
 
-      # - name: Setup tmate session
-      #   uses: mxschmitt/action-tmate@v3
 
       - name: Clone Repo
         run: |
           git clone https://${{ secrets.WIKI_ACTION_TOKEN }}@github.com/nanos/FediFetcher-docs.git
           cd FediFetcher-docs
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
       - name: Add Wiki Remote
         run: git remote add origin https://${{ secrets.WIKI_ACTION_TOKEN }}@github.com/nanos/FediFetcher.wiki.git
       - name: Sync content
