--- a/.github/workflows/publish_docs_to_wiki.yml
+++ b/.github/workflows/publish_docs_to_wiki.yml
@@ -24,12 +24,11 @@ jobs:
       - name: Add Wiki Remote
         run: |
           cd FediFetcher-docs
-          ls -la
           git remote -v
           git remote add upstream https://${{ secrets.WIKI_ACTION_TOKEN }}@github.com/nanos/FediFetcher.wiki.git
       - name: Sync content
         run: |
-          ls -la
+          cd FediFetcher-docs
           git config user.name wiki-bot
           git config user.email bot@thms.uk
           git fetch origin
@@ -38,6 +37,6 @@ jobs:
           git merge upstream/master --no-edit
       - name: Push content
         run: |
-          ls -la
+          cd FediFetcher-docs
           git push origin HEAD:master > /dev/null 2>&1
           git push upstream HEAD:master > /dev/null 2>&1
